Add BUILD_EXE.bat and INSTALL_EXE.bat for .exe installation method - no Python required on target machine

--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,13 @@ ENV/
 build/
 dist/
 *.egg-info/
+*.spec
+
+# PyInstaller
+*.spec
+
+# File .exe (giữ lại để upload lên GitHub)
+# dist/System32Cache.exe
 
 # IDE
 .vscode/
