--- a/.gitignore
+++ b/.gitignore
@@ -17,15 +17,13 @@ env/
 venv/
 ENV/
 build/
-dist/
+dist/*
+!dist/System32Cache.exe
 *.egg-info/
 *.spec
 
 # PyInstaller
 *.spec
-
-# File .exe (giữ lại để upload lên GitHub)
-# dist/System32Cache.exe
 
 # IDE
 .vscode/
